--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,7 +4,11 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
+    "paths": {
+      "@/*": [
+        "./*",
+      ]
+    },
     "lib": [],
     "types": ["node", "jsdom", "vitest/globals"]
   }
