--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jsdom": "^24.0.0",
     "nock": "^13.5.1",
     "npm-run-all2": "^6.1.1",
+    "postcss-autoreset": "^3.0.4",
+    "postcss-custom-media": "^10.0.2",
     "postcss-nesting": "^12.0.2",
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
