--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "vite": "^5.0.11",
     "vitest": "^1.2.2",
     "vue-tsc": "^1.8.27"
+  },
+  "engines": {
+    "node": ">=21.6.1",
+    "npm": ">=10.2.4"
   }
 }
