--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,9 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "./**/*", "./**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "exclude": [
+    "src/**/__tests__/*",
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
@@ -11,5 +13,6 @@
     },
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "types": ["vitest/globals"]
   }
 }
