refactor: rename src folder to infra to cope with DDD

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "./**/*", "./**/*.vue"],
   "exclude": [
-    "src/**/__tests__/*",
+    "infra/**/__tests__/*",
   ],
   "compilerOptions": {
     "baseUrl": ".",
