--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write ./"
   },
   "dependencies": {
     "mitt": "^3.0.1",
